Remove unnecessary dependencies